# quixote

./: .gitmodules  CMakeLists.txt  Dockerfile
.circleci/: Dockerfile  config.yml
src/: CMakelists.txt
src/common/: CMakeLists.txt  CMakelists.txt
src/common/logger/: CMakeLists.txt  CMakelists.txt  log_exceptions.hpp  log_sink.hpp  log_sink_factory.cpp  log_sink_factory.hpp  log_sink_impl.cpp  log_sink_impl.hpp  main.cpp  severity.cpp  severity.hpp
src/common/settings/: CMakeLists.txt  CMakelists.txt  main.cpp  settings.hpp  settings_exception.hpp  settings_impl.cpp  settings_impl.hpp  settings_impl_json.cpp  settings_impl_json.hpp  settings_json_factory.cpp  settings_json_factory.hpp
test/: CMakelists.txt
test/common/: CMakeLists.txt
test/common/settings/: CMakeLists.txt  CMakelists.txt  settings_json_factory_unittest.cpp  settings_json_impl_unittest.cpp
test/gtest/: CMakeLists.txt  main.cpp
